Refonte de l'architecture des DTO et ajout de la dockerisation